--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,77 @@
-body{
-background-color:aqua;
-color: white;
-font-family: Arial;
+*{
+    margin:0;
+    box-sizing: border-box;
 }
+ header{
+        text-align: center;
+
+       background-image: url(fundo-cabecalho.png); 
+       background-color: black;
+       background-repeat: no-repeat;
+       background-size: cover;
+       padding: 27px;
+ }
+       h1{
+        text-align: center;
+        font-size: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 600;
+        margin-top: 7px;
+        margin-bottom: 11px;
+       }
+
+       label{
+        font-family: Arial;
+        font-size: 16px;
+        font-weight: bold;
+        display: block;
+       }
+
+       input, textarea{
+        display:block;
+        width: 100%;
+        height: 38px;
+        background-color: slategray;
+        border: none;
+        border-radius: 0;
+        color: black;
+        font-size: 16px;
+        margin-bottom: 12px;
+
+       }
+
+       textarea{
+        height: 94px;
+       }
+       
+       button{
+        font-size: 18px;
+        font-weight: bold;
+        padding-top:15px ;
+        padding-bottom: 15px;
+        width: 217px;
+        background-color: rgb(223, 222, 215);
+        border: 0;
+        margin: auto;
+        display: block;
+       }
+
+       footer{
+        margin-top: 50px;
+        text-align: center;
+        background-color: black;
+        color: whitesmoke;
+        font-size: 14px;
+        padding: 10px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+       }
+
+       div{
+        margin-left: 17px;
+        margin-right: 17px;
+       }
+       
+ 
+ 
+
+    
